[gd_scene load_steps=22 format=2]

[ext_resource path="res://scenes/playerStats.tscn" type="PackedScene" id=1]
[ext_resource path="res://resource/fonts/mago1.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://resource/fonts/mago3.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://resource/Panel_Battle_Log.png" type="Texture" id=4]
[ext_resource path="res://scenes/enemyStats.tscn" type="PackedScene" id=5]
[ext_resource path="res://resource/Pigeon_Basic.png" type="Texture" id=6]
[ext_resource path="res://scenes/battleScene/battleScene.gd" type="Script" id=7]
[ext_resource path="res://resource/Barra_Base.png" type="Texture" id=8]
[ext_resource path="res://resource/Bar_Attack.png" type="Texture" id=9]

[sub_resource type="GDScript" id=1]
script/source = "extends NinePatchRect
var targetPos=Vector2()
var duration=1.5
func _ready():
	randomize()
	duration*=rand_range(0.5,1.5)
	targetPos=self.rect_global_position
	self.rect_global_position.y=-1.5*self.rect_size.y
	var twnEnter=Tween.new()
	add_child(twnEnter)
	twnEnter.interpolate_property(self,\"rect_global_position:y\",self.rect_global_position.y,targetPos.y,duration,Tween.TRANS_QUART,Tween.EASE_OUT)
	twnEnter.start()
"

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
outline_color = Color( 0.0862745, 0.0313726, 0.0313726, 1 )
font_data = ExtResource( 3 )

[sub_resource type="GDScript" id=5]
script/source = "extends RichTextLabel

var bufferedMessage=\"\"

func _ready():
	self.bbcode_text=\"\"
	set_process(true)
func _process(delta):
	if bufferedMessage!=\"\":
		self.bbcode_text+=bufferedMessage[0]
		bufferedMessage.erase(0,1)
"

[sub_resource type="GDScript" id=6]
script/source = "extends TextureProgress

var targetPos=Vector2()
var duration=1.0

func _ready():
	randomize()
	duration*=rand_range(0.5,1.5)
	targetPos=self.rect_global_position
	self.rect_global_position.y=-1.5*self.rect_size.y
	var twnEnter=Tween.new()
	add_child(twnEnter)
	twnEnter.interpolate_property(self,\"rect_global_position:y\",self.rect_global_position.y,targetPos.y,duration,Tween.TRANS_QUART,Tween.EASE_OUT)
	twnEnter.start()
	set_process(true)
func _process(delta):
	self.value=get_tree().root.get_node(\"/root/battleScene\").playerStamina


"

[sub_resource type="GDScript" id=7]
script/source = "extends TextureRect
var targetPos=Vector2()
var duration=1.0
func _ready():
	self.texture=load(global.pigeonClassesAndSprites[global.player.class].sprite)
	randomize()
	duration*=rand_range(0.5,1.5)
	targetPos=self.rect_global_position
#	self.rect_global_position.y=OS.window_size.y*2
	var twnEnter=Tween.new()
	add_child(twnEnter)
	twnEnter.interpolate_property(self,\"rect_global_position:y\",OS.window_size.y*2,targetPos.y,duration,Tween.TRANS_QUART,Tween.EASE_OUT)
	twnEnter.start()
	
	get_tree().root.get_node(\"/root/battleScene\").playerSpr=self
	$area2D.position=self.rect_size/2
	$area2D.connect(\"area_entered\",get_tree().root.get_node(\"/root/battleScene\"),\"effects\")
"

[sub_resource type="CircleShape2D" id=8]
radius = 44.3355

[sub_resource type="GDScript" id=9]
script/source = "extends TextureProgress

var targetPos=Vector2()
var duration=1.0

func _ready():
	randomize()
	duration*=rand_range(0.5,1.5)
	targetPos=self.rect_global_position
	self.rect_global_position.y=-1.5*self.rect_size.y
	var twnEnter=Tween.new()
	add_child(twnEnter)
	twnEnter.interpolate_property(self,\"rect_global_position:y\",self.rect_global_position.y,targetPos.y,duration,Tween.TRANS_QUART,Tween.EASE_OUT)
	twnEnter.start()
	set_process(true)
func _process(delta):
	self.value=get_tree().root.get_node(\"/root/battleScene\").enemyStamina


"

[sub_resource type="GDScript" id=10]
script/source = "extends TextureRect
var targetPos=Vector2()
var duration=1.0
func _ready():
	self.texture=load(global.pigeonClassesAndSprites[global.enemy.class].sprite)
	randomize()
	duration*=rand_range(0.5,1.5)
	targetPos=self.rect_global_position
#	self.rect_global_position.y=OS.window_size.y*2
	var twnEnter=Tween.new()
	add_child(twnEnter)
	twnEnter.interpolate_property(self,\"rect_global_position:y\",OS.window_size.y*2,targetPos.y,duration,Tween.TRANS_QUART,Tween.EASE_OUT)
	twnEnter.start()
	
	get_tree().root.get_node(\"/root/battleScene\").enemySpr=self
	self.rect_pivot_offset=self.rect_size/2
	$area2D.position=self.rect_size/2
	$area2D.connect(\"area_entered\",get_tree().root.get_node(\"/root/battleScene\"),\"effects\")

"

[sub_resource type="GDScript" id=11]
script/source = "extends Button
func _ready():
	self.visible=false
	self.rect_global_position.y=2*OS.window_size.y
	get_tree().root.get_node(\"/root/battleScene\").exitButton=self
	connect(\"pressed\",get_tree().root.get_node(\"/root/battleScene\"),\"exitBattle\")
	self.connect(\"mouse_entered\",global,\"createHoverSfx\")
	self.connect(\"button_down\",global,\"createSelectSfx\")
"

[sub_resource type="GDScript" id=12]
script/source = "extends Button
func _ready():
	self.visible=false
	self.rect_global_position.y=2*OS.window_size.y
	get_tree().root.get_node(\"/root/battleScene\").resetButton=self
	connect(\"pressed\",get_tree().root.get_node(\"/root/battleScene\"),\"gameOver\")
	self.connect(\"mouse_entered\",global,\"createHoverSfx\")
	self.connect(\"button_down\",global,\"createSelectSfx\")
"

[node name="battleScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 250.909 ]
}

[node name="twnAttack" type="Tween" parent="."]

[node name="twnColorRectTransparency" type="Tween" parent="."]

[node name="twnRecoil" type="Tween" parent="."]

[node name="twnShake" type="Tween" parent="."]

[node name="twnSelfPos" type="Tween" parent="."]

[node name="twnBackButton" type="Tween" parent="."]

[node name="colorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.128906, 0.128906, 0.128906, 0.75 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="marginCtn" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.94812
margin_top = -3.53566
margin_right = 1.94812
margin_bottom = -3.53564
rect_clip_content = true
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="battlePanel" type="PanelContainer" parent="marginCtn"]
margin_left = 25.0
margin_top = 25.0
margin_right = 871.0
margin_bottom = 479.0
rect_clip_content = true

[node name="vboxCtn" type="VBoxContainer" parent="marginCtn/battlePanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 839.0
margin_bottom = 447.0
alignment = 1

[node name="hboxCtnTop" type="HBoxContainer" parent="marginCtn/battlePanel/vboxCtn"]
margin_right = 832.0
margin_bottom = 200.0
alignment = 1

[node name="playerStats" parent="marginCtn/battlePanel/vboxCtn/hboxCtnTop" instance=ExtResource( 1 )]
entering = true
compact = true

[node name="vsepL" type="VSeparator" parent="marginCtn/battlePanel/vboxCtn/hboxCtnTop"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 254.0
margin_right = 280.0
margin_bottom = 200.0
size_flags_horizontal = 3

[node name="panelContainer" type="NinePatchRect" parent="marginCtn/battlePanel/vboxCtn/hboxCtnTop"]
margin_left = 284.0
margin_right = 547.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 10.0
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 98, 176 )
patch_margin_left = 11
patch_margin_top = 15
patch_margin_right = 11
patch_margin_bottom = 11
script = SubResource( 1 )

[node name="marginContainer" type="MarginContainer" parent="marginCtn/battlePanel/vboxCtn/hboxCtnTop/panelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="richTextLabel" type="RichTextLabel" parent="marginCtn/battlePanel/vboxCtn/hboxCtnTop/panelContainer/marginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 243.0
margin_bottom = 190.0
size_flags_horizontal = 3
custom_fonts/italics_font = SubResource( 2 )
custom_fonts/bold_font = SubResource( 3 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "#123> TESTE
#123> TESTE
#123> TESTE
#123> TESTE
#123> TESTE
#123> TESTE
#123> TESTE
#123> TESTE
#123> TESTE
#123> TESTE
"
text = "#123> TESTE
#123> TESTE
#123> TESTE
#123> TESTE
#123> TESTE
#123> TESTE
#123> TESTE
#123> TESTE
#123> TESTE
#123> TESTE
"
scroll_following = true
script = SubResource( 5 )

[node name="vsepR" type="VSeparator" parent="marginCtn/battlePanel/vboxCtn/hboxCtnTop"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 551.0
margin_right = 577.0
margin_bottom = 200.0
size_flags_horizontal = 3

[node name="enemyStats" parent="marginCtn/battlePanel/vboxCtn/hboxCtnTop" instance=ExtResource( 5 )]
margin_left = 581.0
margin_right = 831.0
entering = true
compact = true

[node name="hboxCtnMid" type="HBoxContainer" parent="marginCtn/battlePanel/vboxCtn"]
margin_top = 204.0
margin_right = 832.0
margin_bottom = 416.0
size_flags_vertical = 3
size_flags_stretch_ratio = 6.0
alignment = 1

[node name="playerCtn" type="MarginContainer" parent="marginCtn/battlePanel/vboxCtn/hboxCtnMid"]
margin_right = 250.0
margin_bottom = 212.0

[node name="vboxPlayer" type="VBoxContainer" parent="marginCtn/battlePanel/vboxCtn/hboxCtnMid/playerCtn"]
margin_right = 250.0
margin_bottom = 212.0
rect_min_size = Vector2( 250, 0 )
alignment = 1

[node name="barCtn" type="MarginContainer" parent="marginCtn/battlePanel/vboxCtn/hboxCtnMid/playerCtn/vboxPlayer"]
margin_right = 250.0
margin_bottom = 22.0
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="actionBar" type="TextureProgress" parent="marginCtn/battlePanel/vboxCtn/hboxCtnMid/playerCtn/vboxPlayer/barCtn"]
margin_left = 10.0
margin_right = 240.0
margin_bottom = 22.0
size_flags_horizontal = 3
texture_over = ExtResource( 8 )
texture_progress = ExtResource( 9 )
nine_patch_stretch = true
script = SubResource( 6 )

[node name="hSeparator" type="HSeparator" parent="marginCtn/battlePanel/vboxCtn/hboxCtnMid/playerCtn/vboxPlayer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 26.0
margin_right = 250.0
margin_bottom = 31.0
custom_constants/separation = 5

[node name="playerSpr" type="TextureRect" parent="marginCtn/battlePanel/vboxCtn/hboxCtnMid/playerCtn/vboxPlayer"]
margin_top = 35.0
margin_right = 250.0
margin_bottom = 212.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0
texture = ExtResource( 6 )
stretch_mode = 6
script = SubResource( 7 )

[node name="area2D" type="Area2D" parent="marginCtn/battlePanel/vboxCtn/hboxCtnMid/playerCtn/vboxPlayer/playerSpr"]

[node name="collisionShape2D" type="CollisionShape2D" parent="marginCtn/battlePanel/vboxCtn/hboxCtnMid/playerCtn/vboxPlayer/playerSpr/area2D"]
shape = SubResource( 8 )

[node name="vsep" type="VSeparator" parent="marginCtn/battlePanel/vboxCtn/hboxCtnMid"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 254.0
margin_right = 578.0
margin_bottom = 212.0
size_flags_horizontal = 3

[node name="enemyCtn" type="MarginContainer" parent="marginCtn/battlePanel/vboxCtn/hboxCtnMid"]
margin_left = 582.0
margin_right = 832.0
margin_bottom = 212.0

[node name="vboxPlayer" type="VBoxContainer" parent="marginCtn/battlePanel/vboxCtn/hboxCtnMid/enemyCtn"]
margin_right = 250.0
margin_bottom = 212.0
rect_min_size = Vector2( 250, 0 )
size_flags_vertical = 3
alignment = 1

[node name="barCtn" type="MarginContainer" parent="marginCtn/battlePanel/vboxCtn/hboxCtnMid/enemyCtn/vboxPlayer"]
margin_right = 250.0
margin_bottom = 22.0
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="actionBar" type="TextureProgress" parent="marginCtn/battlePanel/vboxCtn/hboxCtnMid/enemyCtn/vboxPlayer/barCtn"]
margin_left = 10.0
margin_right = 240.0
margin_bottom = 22.0
size_flags_horizontal = 3
texture_over = ExtResource( 8 )
texture_progress = ExtResource( 9 )
nine_patch_stretch = true
script = SubResource( 9 )
__meta__ = {
"_editor_description_": ""
}

[node name="hSeparator" type="HSeparator" parent="marginCtn/battlePanel/vboxCtn/hboxCtnMid/enemyCtn/vboxPlayer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 26.0
margin_right = 250.0
margin_bottom = 31.0
custom_constants/separation = 5

[node name="textureRect" type="TextureRect" parent="marginCtn/battlePanel/vboxCtn/hboxCtnMid/enemyCtn/vboxPlayer"]
margin_top = 35.0
margin_right = 250.0
margin_bottom = 212.0
rect_pivot_offset = Vector2( 125, 82 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0
texture = ExtResource( 6 )
stretch_mode = 6
flip_h = true
script = SubResource( 10 )

[node name="area2D" type="Area2D" parent="marginCtn/battlePanel/vboxCtn/hboxCtnMid/enemyCtn/vboxPlayer/textureRect"]

[node name="collisionShape2D" type="CollisionShape2D" parent="marginCtn/battlePanel/vboxCtn/hboxCtnMid/enemyCtn/vboxPlayer/textureRect/area2D"]
shape = SubResource( 8 )

[node name="hboxCtnBot" type="HBoxContainer" parent="marginCtn/battlePanel/vboxCtn"]
margin_top = 420.0
margin_right = 832.0
margin_bottom = 440.0
size_flags_vertical = 5
alignment = 1

[node name="vBoxContainer" type="CenterContainer" parent="marginCtn/battlePanel/vboxCtn/hboxCtnBot"]
margin_left = 389.0
margin_right = 443.0
margin_bottom = 20.0

[node name="btnGoBack" type="Button" parent="marginCtn/battlePanel/vboxCtn/hboxCtnBot/vBoxContainer"]
margin_right = 54.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
text = "Return"
script = SubResource( 11 )

[node name="btnReset" type="Button" parent="marginCtn/battlePanel/vboxCtn/hboxCtnBot/vBoxContainer"]
margin_left = 2.0
margin_right = 51.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
text = "Retry!"
script = SubResource( 12 )
